newclay/test/Compiler/Propagation/Fail/DeclaredNoreturnButReturn2/main.clay
main() noreturn : Int {
    return 1;
}
